--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ nav li{margin-left: 20px; list-style: none;} /* list-style: none le saca el punt
 nav a{text-decoration: none;
 color: rgb(104, 43, 43);} /* text-decoration: none le saca el subrayado */
 
-nav a:hover{color: brown;}
+nav a:hover{color: rgb(121, 22, 22);}
 
 nav img{width: 5%; height: auto; display: flex;}
  
