--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,13 @@ b{padding: 1%; padding-top: 1%;}
 
 p{font-size: small;}
 
+.accordion{padding: 1%; margin: 0%;}
+
 #info{align-items: center;}
 
 form{align-self: auto; font-size: small;}
+
+form button{margin-left: 2%;}
 
 .pie{display: flex;justify-content: flex-end; }
 
