--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,4 @@ form{align-self: auto; font-size: large;}
 
 form button{margin-left: 2%;}
 
-footer #pie{display: flex;justify-content: flex-end; }
-
-footer #pie a:hover{color:black ;}
-
-footer{border: 0ch;margin: 0%; padding: 0%;}
-
-div.pie{border: 0ch;margin: 0%; padding: 0%;}
-
+#pie{text-align: center;}
