--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-*{ font-family: Raleway; background-color:beige;}
+*{ font-family: Raleway;;
+    background-image:url("assets/img/primer1.jpg")}
 
 section{padding: 10px; background-color: beige;}
 
@@ -27,3 +28,263 @@ form{align-self: auto; font-size: large;}
 form button{margin-left: 2%;}
 
 #pie{text-align: center;}
+
+#hero {
+    width: 100%;
+    height: 100vh;
+    background-attachment: fixed;
+    background-image:url("/assets/img/slides/primer1.jpg");
+    background-size: cover;
+    position: relative;
+    padding: 0;
+    z-index: 2;}
+  
+  
+#hero::after {
+    content: "";
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;}
+  
+#hero .container {
+    padding-top: 110px;
+}
+  
+@media (max-width: 992px) {
+    #hero .container {
+      padding-top: 98px;
+    }}
+  
+#hero h1 {
+    margin: 0;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 56px;
+    color: #fff;
+    font-family: "Poppins", sans-serif;}
+  
+#hero h1 span {
+    color: #cda45e;}
+  
+#hero h2 {
+    color: #eee;
+    margin-bottom: 10px 0 0 0;
+    font-size: 22px;}
+  
+  #hero .btns {
+    margin-top: 30px;
+  }
+  
+  #hero .btn-menu,
+  #hero .btn-book {
+    font-weight: 600;
+    font-size: 13px;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 12px 30px;
+    border-radius: 50px;
+    transition: 0.3s;
+    line-height: 1;
+    color: white;
+    border: 2px solid #cda45e;
+  }
+  
+  #hero .btn-menu:hover,
+  #hero .btn-book:hover {
+    background: #cda45e;
+    color: #fff;
+  }
+  
+  #hero .btn-book {
+    margin-left: 15px;
+  }
+  
+  @media (min-width: 1024px) {
+    #hero {
+      background-attachment: fixed;
+    }
+  }
+
+  
+  @media (max-height: 500px) {
+    #hero {
+      height: auto;
+    }
+  
+    #hero .container {
+      padding-top: 130px;
+      padding-bottom: 60px;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    #hero h1 {
+      font-size: 28px;
+      line-height: 36px;
+    }
+  
+    #hero h2 {
+      font-size: 18px;
+      line-height: 24px;
+    }
+  }
+  
+  @-webkit-keyframes pulsate-btn {
+    0% {
+      transform: scale(0.6, 0.6);
+      opacity: 1;
+    }
+  
+    100% {
+      transform: scale(1, 1);
+      opacity: 0;
+    }
+  }
+  
+  @keyframes pulsate-btn {
+    0% {
+      transform: scale(0.6, 0.6);
+      opacity: 1;
+    }
+  
+    100% {
+      transform: scale(1, 1);
+      opacity: 0;
+    }
+  }
+
+
+  #header {
+    background: rgba(54, 51, 44, 0.6);
+    border-bottom: 1px solid rgba(54, 51, 44, 0.6);
+    transition: all 0.5s;
+    z-index: 997;
+    padding: 10px 0;
+    top: 0px;
+  }
+  
+  #header.header-scrolled {
+    top: 0;
+    background: rgba(54, 51, 44, 0.6);
+    border-bottom: 1px solid #37332a;
+  }
+
+  #header h1 a:hover {color: #9b855e;}
+
+  .navbar {
+    padding: 0;
+  }
+  
+  .navbar ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
+  }
+  
+  .navbar li {
+    position: relative;
+  }
+  
+  .navbar a,
+  .navbar a:focus {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0 10px 30px;
+    color: #fff;
+    white-space: nowrap;
+    transition: 0.3s;
+    font-size: 14px;
+  }
+  
+  .navbar a i,
+  .navbar a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+  }
+  
+  .navbar a:hover,
+  .navbar .active,
+  .navbar .active:focus,
+  .navbar li:hover>a {
+    color: #d9ba85;
+  }
+
+/*   
+  .mobile-nav-toggle {
+    color: #fff;
+    font-size: 28px;
+    cursor: pointer;
+    display: none;
+    line-height: 0;
+    transition: 0.5s;
+  }
+  
+  @media (max-width: 991px) {
+    .mobile-nav-toggle {
+      display: block;
+    }
+  
+    .navbar ul {
+      display: none;
+    }
+  }
+  
+  .navbar-mobile {
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.9);
+    transition: 0.3s;
+    z-index: 999;
+  }
+  
+  .navbar-mobile .mobile-nav-toggle {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+  }
+  
+  .navbar-mobile ul {
+    display: block;
+    position: absolute;
+    top: 55px;
+    right: 15px;
+    bottom: 15px;
+    left: 15px;
+    padding: 10px 0;
+    border-radius: 6px;
+    background-color: #fff;
+    overflow-y: auto;
+    transition: 0.3s;
+  }
+  
+  .navbar-mobile a,
+  .navbar-mobile a:focus {
+    padding: 10px 20px;
+    font-size: 15px;
+    color: #1a1814;
+  }
+  
+  .navbar-mobile a:hover,
+  .navbar-mobile .active,
+  .navbar-mobile li:hover>a {
+    color: #cda45e;
+  }
+  
+  .navbar-mobile .getstarted,
+  .navbar-mobile .getstarted:focus {
+    margin: 15px;
+  }
+   */
