--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,6 @@ form button{margin-left: 2%;}
 
   #header {
     background: rgba(54, 51, 44, 0.6);
-    border-bottom: 1px solid rgba(54, 51, 44, 0.6);
     transition: all 0.5s;
     z-index: 997;
     padding: 10px 0;
@@ -171,7 +170,6 @@ form button{margin-left: 2%;}
   #header.header-scrolled {
     top: 0;
     background: rgba(54, 51, 44, 0.6);
-    border-bottom: 1px solid #37332a;
   }
 
   #header h1 a:hover {color: #9b855e;}
@@ -217,74 +215,93 @@ form button{margin-left: 2%;}
   .navbar li:hover>a {
     color: #d9ba85;
   }
+  
 
-/*   
-  .mobile-nav-toggle {
-    color: #fff;
-    font-size: 28px;
+  .menu #menu-flters {
+    padding: 0;
+    margin: 0 auto 0 auto;
+    list-style: none;
+    text-align: center;
+    border-radius: 50px;
+  }
+  
+  .menu #menu-flters li {
     cursor: pointer;
-    display: none;
-    line-height: 0;
-    transition: 0.5s;
+    display: inline-block;
+    padding: 8px 12px 10px 12px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1;
+    color: #cda45e;
+    margin-bottom: 10px;
+    transition: all ease-in-out 0.3s;
+    border-radius: 50px;
+    font-family: "Playfair Display", serif;
   }
   
-  @media (max-width: 991px) {
-    .mobile-nav-toggle {
-      display: block;
-    }
-  
-    .navbar ul {
-      display: none;
-    }
+  .menu #menu-flters li:hover,
+  .menu #menu-flters li.filter-active {
+    color: #30291c;
   }
   
-  .navbar-mobile {
-    position: fixed;
+  .menu #menu-flters li:last-child {
+    margin-right: 0;
+  }
+  
+  .menu .menu-item {
+    margin-top: 50px;
+  }
+  
+  .menu .menu-img {
+    width: 70px;
+    border-radius: 50%;
+    float: left;
+    border: 5px solid rgba(255, 255, 255, 0.2);
+  }
+  
+  .menu .menu-content {
+    margin-left: 85px;
     overflow: hidden;
-    top: 0;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+  }
+  
+  .menu .menu-content::after {
+    position: absolute;
+    left: 20px;
     right: 0;
-    left: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.9);
-    transition: 0.3s;
-    z-index: 999;
+    top: -4px;
+    z-index: 1;
+    color: #bab3a6;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   }
   
-  .navbar-mobile .mobile-nav-toggle {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-  }
-  
-  .navbar-mobile ul {
-    display: block;
-    position: absolute;
-    top: 55px;
-    right: 15px;
-    bottom: 15px;
-    left: 15px;
-    padding: 10px 0;
-    border-radius: 6px;
-    background-color: #fff;
-    overflow-y: auto;
+  .menu .menu-content a {
+    padding-right: 10px;;
+    position: relative;
+    z-index: 3;
+    font-weight: 700;
+    color: #cda45e;
     transition: 0.3s;
   }
   
-  .navbar-mobile a,
-  .navbar-mobile a:focus {
-    padding: 10px 20px;
-    font-size: 15px;
-    color: #1a1814;
-  }
-  
-  .navbar-mobile a:hover,
-  .navbar-mobile .active,
-  .navbar-mobile li:hover>a {
+  .menu .menu-content a:hover {
     color: #cda45e;
   }
   
-  .navbar-mobile .getstarted,
-  .navbar-mobile .getstarted:focus {
-    margin: 15px;
+  .menu .menu-content span {
+    position: relative;
+    z-index: 3;
+    padding: 0 10px;
+    font-weight: 600;
+    color: #cda45e;
   }
-   */
+  
+  .menu .menu-ingredients {
+    margin-left: 85px;
+    font-style: italic;
+    font-size: 14px;
+    font-family: "Poppins", sans-serif;
+    color: #cda45e;
+  }
